Fix flake8 excludes
Tox flake config was hiding the standard config from setup.cfg and
causing failure to use correct excludes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ release = dists upload
 dists = clean --all sdist bdist_wheel
 
 [flake8]
-exclude = .tox,.venv,build,dist,docs,*.egg,*.egg-info
+exclude = .tox,.venv,build,dist,docs,*.egg,*.egg-info,.eggs
 count = 1
 show-pep8 = 1
 show-source = 1
