--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist=flake8,py27,py35,docs
 deps=
     -r{toxinidir}/requirements.txt
     nose
+    coverage
 setenv=
     PYTHONDONTWRITEBYTECODE=true
 commands=
