Travis: test against more python versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion=1.6
 skipsdist=True
-envlist=flake8,py27,py35,docs
+envlist=flake8,py27,py34,py35,py36,py37,docs
 
 [testenv]
 deps=
