--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: python
 python:
-  - "2.7"
-  - "3.5"
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
 sudo: false
 matrix:
   fast_finish: true
-
+  include:
+    # https://github.com/travis-ci/travis-ci/issues/9815
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install:
   - pip install wheel tox-travis
   - python setup.py install bdist_wheel
