Add dummy test configuration
Add an ib3.tests module with a dummy test that only verifies that
imports work in the test environment.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ verbosity=2
 detailed-errors=1
 with-coverage=1
 with-doctest=1
-cover-package=iptools
+cover-package=ib3
 cover-html=1
 cover-html-dir=docs/_build/cover
 cover-branches=1
