--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist=flake8,py27,py34,py35,py36,py37,docs
 [testenv]
 deps=
     -r{toxinidir}/requirements.txt
+    coverage
     nose
 setenv=
     PYTHONDONTWRITEBYTECODE=true
