Test ib3.Bot and ib3.connection.SSL
Add unit tests for basic behaviors of ib3.Bot and ib3.connection.SSL

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps=
     -r{toxinidir}/requirements.txt
     coverage
     nose
+    py27: mock
 setenv=
     PYTHONDONTWRITEBYTECODE=true
 commands=
