ci: Replace nose with pytest

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,18 @@
 [tox]
-minversion=1.6
-skipsdist=True
-envlist=flake8,py37,py38,py39,py310,py311,docs
+minversion = 4.0
+envlist = flake8,py37,py38,py39,py310,py311,docs
+skip_missing_interpreters = true
 
 [testenv]
 deps=
     -r{toxinidir}/requirements.txt
-    coverage
-    nose
+    pytest
+    pytest-cov
+    pytest-mock
 setenv=
     PYTHONDONTWRITEBYTECODE=true
 commands=
-    nosetests --with-doctest --doctest-tests -v --detailed-errors
+    pytest ib3/
 
 [testenv:docs]
 deps=
@@ -22,11 +23,29 @@ commands=
     sphinx-build -q -W -b html -d {envtmpdir}/doctrees doc {envtmpdir}/html
 
 [testenv:flake8]
-deps=flake8
-commands=flake8
+base_python = py311
+deps = flake8
+commands =
+    flake8
 
 [flake8]
-count=1
-show-pep8=1
-show-source=1
-statistics=1
+count = 1
+show-pep8 = 1
+show-source = 1
+statistics = 1
+
+[pytest]
+addopts = --cov=ib3 --cov-report=term --cov-report=html --cov-report=xml
+
+[coverage:run]
+branch = True
+
+[coverage:report]
+show_missing = True
+skip_empty = True
+
+[coverage:html]
+directory = dist/htmlcov
+
+[coverage:xml]
+output = dist/coverage.xml
