dev: Convert to hatchling build system backend
Replace the setuptools based build system with a more modern hatchling
based configuration. The new configuration relies on git tags to
specify the package version. It also drops support for Python <3.7.

Closes #11
Closes #12

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 4.0
-envlist = flake8,py37,py38,py39,py310,py311,docs
+envlist = flake8,py37,py38,py39,py310,py311,docs,pkg_meta
 skip_missing_interpreters = true
 
 [testenv]
@@ -12,7 +12,7 @@ deps=
 setenv=
     PYTHONDONTWRITEBYTECODE=true
 commands=
-    pytest ib3/
+    pytest tests/
 
 [testenv:docs]
 deps=
@@ -21,6 +21,19 @@ deps=
     sphinx_rtd_theme
 commands=
     sphinx-build -q -W -b html -d {envtmpdir}/doctrees doc {envtmpdir}/html
+
+[testenv:pkg_meta]
+description = check that generated pacakges are valid
+base_python = py311
+skip_install = true
+deps =
+    build[virtualenv]>=1.0.3
+    check-wheel-contents>=0.4
+    twine>=4.0.2
+commands =
+    python3 -m build --outdir {envtmpdir} --sdist --wheel .
+    twine check --strict {envtmpdir}{/}*
+    check-wheel-contents {envtmpdir}
 
 [testenv:flake8]
 base_python = py311
@@ -49,3 +62,11 @@ directory = dist/htmlcov
 
 [coverage:xml]
 output = dist/coverage.xml
+
+[gh]
+python =
+    3.7 = py37
+    3.8 = py38
+    3.9 = py39
+    3.10 = py310
+    3.11 = flake8, py311, docs, pkg_meta
