dev: Update sphinx and readthedocs config
* Update sphinx config to work with new build backend.
* Add explicit Read the Docs configuration file

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,8 @@ deps=
     sphinx
     sphinx_rtd_theme
 commands=
-    sphinx-build -q -W -b html -d {envtmpdir}/doctrees doc {envtmpdir}/html
+    sphinx-build -q -W -b html -d "{envtmpdir}{/}doctree" docs "{toxinidir}{/}dist{/}docs"
+    python -c 'print(r"documentation available under file://{toxinidir}{/}dist{/}docs{/}index.html")'
 
 [testenv:pkg_meta]
 description = check that generated pacakges are valid
