--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,11 @@ build:
   tools:
     python: "3.11"
 
+python:
+  install:
+    - method: pip
+      path: .
+
 sphinx:
   configuration: docs/conf.py
   fail_on_warning: true
