ci: Add a lot of opinionated linters
Add a pre-commit configuration to apply a collection of linting and
formatting plugins. These will be automatically run by tox in CI, but
can also be setup to run as a pre-commit action in the local repo.

Highlights:
* Use black for code formatting
* Use isort for import formatting
* Add a number of flake8 plugins including bugbear

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,12 @@ build.targets.sdist.include = [
 
 [tool.hatch.version]
 source = "vcs"
+
+[tool.black]
+line_length = 88
+target_version = ["py37"]
+
+[tool.isort]
+known_first_party = ["ib3", "tests"]
+line_length = 88
+profile = "black"
