--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,41 @@
 [tox]
-minversion = 4.0
-envlist = flake8,py37,py38,py39,py310,py311,docs,pkg_meta
+requires =
+    tox>=4.2
+env_list =
+    lint
+    py311
+    py310
+    py39
+    py38
+    py37
+    docs
+    pkg_meta
 skip_missing_interpreters = true
 
 [testenv]
-deps=
+deps =
     pytest
     pytest-cov
     pytest-mock
-setenv=
-    PYTHONDONTWRITEBYTECODE=true
-commands=
+set_env =
+    PYTHONDONTWRITEBYTECODE = true
+commands =
     pytest tests/
 
+[testenv:lint]
+base_python = py311
+deps =
+    pre-commit>=3.2
+commands =
+    pre-commit run --all-files --show-diff-on-failure {posargs}
+    python -c 'print(r"hint: run {envbindir}{/}pre-commit install to add checks as pre-commit hook")'
+escription = format the code base to adhere to our styles, and complain about what we cannot do automatically
+
 [testenv:docs]
-deps=
+deps =
     sphinx
     sphinx_rtd_theme
-commands=
+commands =
     sphinx-build -q -W -b html -d "{envtmpdir}{/}doctree" docs "{toxinidir}{/}dist{/}docs"
     python -c 'print(r"documentation available under file://{toxinidir}{/}dist{/}docs{/}index.html")'
 
@@ -34,13 +52,9 @@ commands =
     twine check --strict {envtmpdir}{/}*
     check-wheel-contents {envtmpdir}
 
-[testenv:flake8]
-base_python = py311
-deps = flake8
-commands =
-    flake8
-
 [flake8]
+exclude = .tox
+max_line_length = 120
 count = 1
 show-pep8 = 1
 show-source = 1
@@ -68,4 +82,4 @@ python =
     3.8 = py38
     3.9 = py39
     3.10 = py310
-    3.11 = flake8, py311, docs, pkg_meta
+    3.11 = lint, py311, docs, pkg_meta
