ci: Update linters and run with py3.13
* Bump pre-commit and linter library versions
* Run pre-commit under py3.13 (3.14 has library issues that need to
  resolve upstream.)

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
     pytest tests/
 
 [testenv:lint]
-base_python = py314
+base_python = py313
 deps =
     pre-commit>=3.2
 commands =
@@ -83,5 +83,5 @@ python =
     3.10 = py310
     3.11 = py311
     3.12 = py312
-    3.13 = py313
-    3.14 = lint, py314, docs, pkg_meta
+    3.13 = lint, py313
+    3.14 = py314, docs, pkg_meta
