docs: Update RTD config
Add missing requirements for sphinx and sphinx_rtd_theme. It is a bit of
a mystery how this worked previously. ¯\_(ツ)_/¯

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,7 @@ escription = format the code base to adhere to our styles, and complain about wh
 
 [testenv:docs]
 deps =
-    sphinx
-    sphinx_rtd_theme
+    -r docs/requirements.txt
 commands =
     sphinx-build -q -W -b html -d "{envtmpdir}{/}doctree" docs "{toxinidir}{/}dist{/}docs"
     python -c 'print(r"documentation available under file://{toxinidir}{/}dist{/}docs{/}index.html")'
